feat(relay): Story 2.2 T5+T5b — shared PooledByteBufAllocator (AD-21) + unconditional AD-30 self-check with budget-check fail|warn (AI-6)
T5: the one shared PooledByteBufAllocator bean (AD-21, destroyMethod="" — it IS the
JVM-global DEFAULT) + the AD-30 live direct-memory startup self-check: ceiling read via
ManagementFactory/-XX:MaxDirectMemorySize parse (last-wins, k/m/g/t suffixes, flag-naming
errors) with Runtime.maxMemory() fallback — no jdk.internal API, so java -jar needs no
--add-exports (2026-08-12 Decision A).

T5b (2026-08-15, operator decision): the check is UNCONDITIONAL — every role×mode cell,
no Epic-3 widening ever needed — and the over-budget severity follows the new
companion.memory.budget-check: fail | warn enum (fail ships as the yml default; any
non-WARN value fails closed; no value skips the check; invalid tokens fail the bind).
warn = starred accepted-risk banner through SLF4J carrying the gate exception's own
message (Mode B pattern); validate() stays the single comparison+throw site.

Adversarial review round (4 lenses → per-finding refutation; 13 raw, 9 confirmed → all
fixed): null/non-WARN defensive cell pinned by direct construction; (warn,
under-ceiling) no-banner cell; FAIL-path banner-absence asserts; HotSpot t-suffix
rejection + duplicate-flag last-wins fixed in the parser. Five mutations proven RED on
exactly their tests. Full clean build GREEN; startup-check 6/6, validator 8/8.

Artifacts: spine AD-30 amended in place + .memlog.md entry; story 2.2 AC8/Task-5/Dev
Notes/File List/Change Log/review records; deferred-work widening entry RESOLVED +
lazy-init app-wide posture item added; sprint-status AI-6 → done; application.yml
documents the key.

Co-Authored-By: Claude <noreply@anthropic.com>