@@ -140,7 +140,14 @@ behind unchanged interfaces.
    which exposes only `usedDirectMemory()`/`usedHeapMemory()`) is compared against `MemoryBudget.compute(...)`
    (Story 1.3) and **fail-fast** (AD-17, non-zero exit) if the live ceiling < budget. The formula references `SmppFrame.MAX_COMMAND_LENGTH` directly (NOT a literal/config key — the static
    RELAY-026 scan already enforces this; keep it green). *(AD-21:191, AD-30:236; deferred-work.md D1; sprint-status
-   AI-6.)*
+   AI-6.)* *(Amended 2026-08-15, T5b, operator decision: the self-check is UNCONDITIONAL — it runs for every
+   role×mode cell, so Epic 3 never needs to widen a guard — and the over-budget severity follows
+   `companion.memory.budget-check: fail | warn`: `fail` is the default (incl. an absent key — prior behavior);
+   `warn` is an explicit accepted-risk opt-in (loud banner + start, the Mode B pattern). No value skips the
+   check itself. NOTE: this AC's base text still names `jdk.internal.misc.VM.maxDirectMemory()` — that
+   mechanism was replaced by Review Decision A (2026-08-12) with `ManagementFactory`/`Runtime.maxMemory()`
+   (no JDK-internal API, no production `--add-exports`); see the spine AD-30 amendment. Spine AD-30 amended
+   in place; see the T5b Dev Notes entry.)*
 
 9. **[AC9] Green build + RED-on-neuter (standing gate AI-1) + bootstrap gates (AI-5/AI-8).** `./gradlew clean build`
    green on JDK 25 + `--enable-preview`. Every fail-closed guard — AD-32 bare-close (AC3),
@@ -185,12 +192,18 @@ behind unchanged interfaces.
   - [x] Tests: RELAY-005 (idempotent double-teardown, double-zeroize safe), RELAY-006 (no orphaned entry on egress-connect-fail). jcstress (RELAY-007) is DEFERRED to the nightly hardening story — note in Completion Record.
   - [x] RED-on-neuter for the idempotent-teardown guard.
 
-- [ ] **Task 5 (AC: 8) — Shared `PooledByteBufAllocator` + AD-30 live self-check (AD-21/AD-30, AI-6).**
-  - [ ] `@Bean PooledByteBufAllocator` (ONE shared, wired to every channel ingress+egress — NOT per-channel). `io.netty.allocator.type=pooled`.
-  - [ ] Startup self-check: read the JVM's live direct-memory ceiling via `jdk.internal.misc.VM.maxDirectMemory()` (mind the `jdk.internal.misc` module-open on JDK 25; `ManagementFactory` arg-parsing is a fallback), compare to `MemoryBudget.compute(maxInboundDepth, concurrentPairs, safetyFactor)` (inputs from `companion.memory.*`), **fail-fast** if under budget. (`ByteBufAllocatorMetric` exposes only `usedDirectMemory()`/`usedHeapMemory()` — current usage, NOT the ceiling.)
-  - [ ] Reference `SmppFrame.MAX_COMMAND_LENGTH` directly in any sizing (keep `Relay026ConstantContractTest` green — no magic `65536`).
-  - [ ] Test: bind `companion.memory.*` to values that exceed a deliberately-small live budget → assert fail-fast (null-vs-blank trap: bind the specific value, do not remove the key).
-  - [ ] RED-on-neuter: removing the self-check → the under-budget startup goes GREEN when it must fail.
+- [x] **Task 5 (AC: 8) — Shared `PooledByteBufAllocator` + AD-30 live self-check (AD-21/AD-30, AI-6).**
+  - [x] `@Bean PooledByteBufAllocator` (ONE shared, wired to every channel ingress+egress — NOT per-channel). `io.netty.allocator.type=pooled`.
+  - [x] Startup self-check: read the JVM's live direct-memory ceiling via `jdk.internal.misc.VM.maxDirectMemory()` (mind the `jdk.internal.misc` module-open on JDK 25; `ManagementFactory` arg-parsing is a fallback), compare to `MemoryBudget.compute(maxInboundDepth, concurrentPairs, safetyFactor)` (inputs from `companion.memory.*`), **fail-fast** if under budget. (`ByteBufAllocatorMetric` exposes only `usedDirectMemory()`/`usedHeapMemory()` — current usage, NOT the ceiling.)
+  - [x] Reference `SmppFrame.MAX_COMMAND_LENGTH` directly in any sizing (keep `Relay026ConstantContractTest` green — no magic `65536`).
+  - [x] Test: bind `companion.memory.*` to values that exceed a deliberately-small live budget → assert fail-fast (null-vs-blank trap: bind the specific value, do not remove the key).
+  - [x] RED-on-neuter: removing the self-check → the under-budget startup goes GREEN when it must fail.
+  - [x] **T5b (2026-08-15, operator decision):** self-check made UNCONDITIONAL (mode-b guard dropped — every
+    role×mode cell; `forwardAWithHugeBudgetRefusesToStart` full-boot test proves the forward cell carries it)
+    + `companion.memory.budget-check: fail | warn` over-ceiling policy (`fail` default incl. absent/null —
+    fail-closed; `warn` = loud accepted-risk banner + start; NO skip value; invalid enum token fails the bind).
+    Mutations proven RED: M1 neutered warn arm → warn test RED; M2 reintroduced mode-b guard → forward-A test
+    RED. Spine AD-30 amended in place; deferred-work "Epic-3 widening" entry resolved.
 
 - [ ] **Task 6 (AC: 4) — Netty pipelines + `SmartLifecycle` acceptor (AD-1/AD-2/AD-16).**
   - [ ] `ServerBootstrap`/`Bootstrap` driven directly (NO Spring messaging integration). Ingress pipeline `SmppFrameDecoder → SmppCodec → BindInterceptor → RelayHandler`; egress `SmppFrameDecoder → SmppCodec → RelayHandler`. One `SmppFrameDecoder` instance per channel (CODEC-014).
@@ -488,6 +501,72 @@ glm-5.2[1m] (Tasks 1–4 — bootstrap gate + observability contract seed + pass
   `private final Map<String, SystemId> messageIdIndex = new HashMap<>();` into `ConnectionEntry` →
   `Relay025StatelessnessScanTest` FAILED (the forbid-rules matched both the `messageId` identifier AND the
   `Map<String,` key type) → reverted → full `:proxy:test` GREEN. Probe had ZERO net change.
+- **T5 module-open — `--add-exports java.base/jdk.internal.misc=ALL-UNNAMED`, NOT `--add-opens`.**
+  `jdk.internal.misc.VM` is a PUBLIC class and `maxDirectMemory()` a PUBLIC static method, so DIRECT
+  (compile-time) access needs only `--add-exports` (exports the package → public API reachable), not
+  `--add-opens` (which is for reflective deep access to non-public members). Verified empirically: without
+  the flag `javac` fails `package jdk.internal.misc is not visible`; with `--add-exports` both compile
+  and `VM.maxDirectMemory()` run resolve. Added to `smpp.java-conventions.gradle.kts` (SHARED, alongside
+  `--enable-preview`) on `JavaCompile` + `Test` + `JavaExec` — consistent with the preview pin's placement,
+  and harmless for modules that never reference the package (codec/buildSrc). The `ManagementFactory`
+  arg-parsing fallback is NOT used: it only sees an EXPLICIT `-XX:MaxDirectMemorySize`, missing the
+  common `-Xmx`-default case, whereas `VM.maxDirectMemory()` returns the true live ceiling in both cases
+  (measured: == `Runtime.maxMemory()` when `-XX:MaxDirectMemorySize` is unset). Error Prone 2.50.0 +
+  NullAway do NOT flag it (`VM.maxDirectMemory()` is `native`, not `@Restricted`; returns primitive `long`).
+- **T5 self-check SCOPING — runtime mode-b guard, NOT an unconditional startup bean (load-bearing).**
+  **[SUPERSEDED 2026-08-15 — T5b (operator decision) made the check UNCONDITIONAL: the mode-b guard is gone,
+  `companion.memory.budget-check` now governs over-budget severity (default `fail` = the behavior this entry
+  describes), and the full-context tests this entry worried about are accommodated by minimal-budget overrides
+  (`TestCompanionConfigs.common()` + the two forward-A yml-backed boots). See the T5b Dev Notes entry. The text
+  below is kept for the record.]**
+  Measured the test JVM's live ceiling: `VM.maxDirectMemory()` == `Runtime.maxMemory()`, which under a
+  capped test JVM (Gradle test worker: 512 MiB) is FAR below the default AD-30 budget
+  (`64 × 1024 × 1.5 × SmppFrame.MAX_COMMAND_LENGTH` ≈ 6 GiB). An UNCONDITIONAL self-check would therefore
+  trip on EVERY full-context boot that carries the default `companion.memory.*` — including the Story-1.3
+  `BootstrapLifecycleTest` (forward) and `CompanionConfigMatrixTest` SEC-052 (mode-b) — on any CI-sized
+  JVM, i.e. flaky-by-environment. The self-check is a RELAY data-plane concern that "mounts with the relay"
+  (AC8), so `DirectMemoryBudgetStartupCheck.afterPropertiesSet()` guards on
+  `properties.reverse() != null && reverse.modeB() != null` and is a no-op for every other cell. This is
+  slice-correct (this story wires the relay for reverse.mode-b ONLY; forward + reverse.mode-a/c relays +
+  their budget checks are Epic 3 — widen the guard then). The forward-context tests (no mode-b) are
+  immune by construction; the mode-b matrix test needed a separate, smaller accommodation (next entry).
+- **T5 `io.netty.allocator.type=pooled` — superseded by the explicit pooled bean (honest deviation).**
+  The subtask names the Netty system property, but it is read ONCE at Netty static init
+  (`ByteBufAllocator.DEFAULT` selection) — setting it programmatically at bean-creation is too late and
+  unreliable (Netty is already class-loaded by the codec). `RelayNettyConfig.pooledByteBufAllocator()`
+  instead returns `PooledByteBufAllocator.DEFAULT` — pooled BY CONSTRUCTION — which T6 wires to every
+  channel via `ChannelOption.ALLOCATOR`. That bean is the authoritative pooling guarantee for the relay
+  data plane; the system property is redundant for channels wired to it. Setting it as a JVM arg
+  (`-Dio.netty.allocator.type=pooled`) is a deploy concern (Epic 5), not code. Flagged for review.
+- **T5 `SpringApplicationBuilder.properties()` precedence trap — default props lose to application.yml.**
+  First fail-fast-context-test draft supplied `companion.memory.*` overrides via
+  `builder.properties(...)`; it GREEN-tripped on the DEFAULT 6 GiB budget (the override was ignored).
+  Cause: `SpringApplicationBuilder.properties(String...)` → `SpringApplication.setDefaultProperties` →
+  LOWEST-precedence property source (Spring Boot externalized-config order: default props < application.yml).
+  `BootstrapLifecycleTest` works this way only because its forward.mode-a branch has NO application.yml
+  entry (commented out), so the default prop is the only source. Fix: pass the memory overrides as
+  COMMAND-LINE ARGS to `run(String...)` (HIGHEST precedence) — they beat application.yml's live
+  `companion.memory.*` defaults. The mode-b branch props stay in `.properties()` (no competing yml entry).
+- **T5 mode-b matrix test accommodation — `reverseB()` uses a minimal budget.** The Story-1.3
+  `CompanionConfigMatrixTest.sec052_reverseModeBWithAckWarnsAndStarts` boots the FULL
+  `ProxyCompanionApplication` for a valid mode-b cell (to fire the `CompanionModeBWarning` banner); with
+  the self-check now active for mode-b, its default 6 GiB budget (set explicitly in
+  `TestCompanionConfigs.common()`) exceeded the test JVM's 512 MiB ceiling → `DirectMemoryBudgetException`.
+  This is the self-check doing its correct job (a 6 GiB budget on a 512 MiB-ceiling JVM IS under-provisioned).
+  Fix: `TestCompanionConfigs.reverseB()` overrides `companion.memory.*` to a minimal budget (1/1/1.0 →
+  65536 bytes) after `common()`, with a comment that a mode-b boot now carries the AD-30 self-check. The
+  self-check still RUNS for every `reverseB()` boot; only the budget is sized to the test JVM. No test
+  asserts on `reverseB()`'s memory values, so this is safe. (The no-ack SEC-052 test uses the slice runner
+  — no `@Component` load — and the bad-port test fails `@Max` validation BEFORE the self-check bean inits,
+  so neither is affected.) This is a legitimate adjustment to satisfy a new startup invariant, NOT a
+  disable-to-pass dodge (AC9): no test was `@Disabled`/removed.
+- **T5 RED-on-neuter — PROVEN on BOTH the unit and the context biter (AC9 AI-1).** Neutered
+  `DirectMemoryBudgetValidator.validate()` (`if (budget > liveCeiling)` → `if (false)`) →
+  `DirectMemoryBudgetValidatorTest.budgetExceedingCeilingThrows()` RED (line 27 — `assertThatThrownBy`
+  got no throw) AND `DirectMemoryBudgetStartupCheckTest.modeBBudgetExceedingLiveCeilingRefusesToStart()`
+  RED (line 65 — the under-budget mode-b context STARTED instead of throwing) → reverted → full `:proxy:test`
+  GREEN. The context biter is exception-safe (closes the unexpectedly-started context on the neutered path
+  so it cannot outlive the assertion failure — MEMORY `mutation-pass-needs-exception-safe-test-cleanup`).
 
 ### Completion Notes List
 
@@ -641,6 +720,87 @@ glm-5.2[1m] (Tasks 1–4 — bootstrap gate + observability contract seed + pass
   two new `@Component`/`final` main types (the `@Nullable Channel egress` field/getter + the two
   `@Nullable`-returning registry methods are the only nullable surfaces). ArchUnit RELAY-025 (new) +
   RELAY-026 unaffected; no existing test touched.
+- **T5 DONE — AC8 shared `PooledByteBufAllocator` (AD-21) + AD-30 live direct-memory self-check (AI-6).**
+  Five main types in the new `proxy/relay/netty/` sub-package (its own `@NullMarked package-info` — AD-35;
+  the relay data-plane splice stays pure-stable API, AD-5): (a) `DirectMemoryBudgetValidator` — pure
+  statics: `validate(long budget, long liveCeiling)` (throws iff `budget > liveCeiling`; budget == ceiling
+  permitted — inclusive) + `liveDirectMemoryCeiling()` → `jdk.internal.misc.VM.maxDirectMemory()` (the live
+  ceiling, NOT `ByteBufAllocatorMetric`'s usage-only `usedDirectMemory()`). (b) `DirectMemoryBudgetException`
+  — the AD-17 fail-fast signal (budget + ceiling in the message + accessors; unchecked — crosses the Spring
+  lifecycle boundary). (c) `RelayNettyConfig` (`@Configuration`) — `@Bean PooledByteBufAllocator` →
+  `PooledByteBufAllocator.DEFAULT` (the ONE shared pooled allocator; T6 wires every channel to it via
+  `ChannelOption.ALLOCATOR`). (d) `DirectMemoryBudgetStartupCheck` (`@Component` `InitializingBean`) — on
+  refresh, computes the budget via `MemoryBudget.compute(memory.maxInboundDepth(), .concurrentPairs(),
+  .safetyFactor())` and validates it against the live ceiling; **mode-b-scoped** (no-op for other cells —
+  the relay mounts mode-b this slice; forward/mode-a/c relays + their checks are Epic 3). The sizing
+  references `SmppFrame.MAX_COMMAND_LENGTH` ONLY transitively (via `MemoryBudget`) — no `65536` literal
+  anywhere in `relay/netty/` (RELAY-026 stays green).
+- **T5 build-convention change — `--add-exports java.base/jdk.internal.misc=ALL-UNNAMED`.** Added to
+  `smpp.java-conventions.gradle.kts` (`JavaCompile` + `Test` + `JavaExec`, shared alongside
+  `--enable-preview`) so `jdk.internal.misc.VM.maxDirectMemory()` resolves at compile + run. `--add-exports`
+  (not `--add-opens`) — direct access to a public static method. Harmless for modules that never reference
+  the package. The `ManagementFactory` arg-parsing fallback is NOT wired (the export is clean + the live API
+  handles the `-Xmx`-default case the fallback misses).
+- **T5 tests (7, 0 skipped/failed):** `DirectMemoryBudgetValidatorTest` (5, unit) — budget>ceiling throws
+  (AD-30 message); budget==ceiling boundary passes; budget<ceiling passes; exception accessors;
+  `liveDirectMemoryCeiling()` > 0 (smoke-proves the export at run time). `DirectMemoryBudgetStartupCheckTest`
+  (2, full `ProxyCompanionApplication` context) — mode-b + minimal budget (65536 B) starts, the AD-21
+  allocator bean is `PooledByteBufAllocator.DEFAULT`, the self-check bean ran; mode-b + huge
+  `concurrent-pairs=1000000` (budget ≈ 6.3 TiB, a valid long) → context fails, root cause
+  `DirectMemoryBudgetException` (null-vs-blank trap: the huge value is BOUND as a command-line arg, not the
+  memory key removed). Memory overrides are command-line args (highest precedence); the mode-b branch is
+  `.properties()` (lowest precedence, but the only source — application.yml has the branches commented).
+- **T5 existing-test accommodation (AC9 — NOT a disable-to-pass).** `TestCompanionConfigs.reverseB()` now
+  overrides `companion.memory.*` to a minimal budget (1/1/1.0) so a valid mode-b full-context boot fits
+  under the test JVM's (small) direct-memory ceiling — the self-check is a new startup invariant for mode-b
+  contexts, so a mode-b test config must satisfy it (same as it satisfies the config validator). The
+  self-check still runs for every `reverseB()` boot. No test was `@Disabled`/removed; full
+  `:codec:test :proxy:test` GREEN (162 proxy tests).
+- **T5 RED-on-neuter — PROVEN (AC9 standing gate AI-1).** Neutered `validate()`'s `budget > liveCeiling`
+  guard → the unit biter (`budgetExceedingCeilingThrows`, line 27) AND the context biter
+  (`modeBBudgetExceedingLiveCeilingRefusesToStart`, line 65 — the under-budget context STARTED instead of
+  throwing) both went RED → reverted → GREEN. The context biter closes the unexpectedly-started context on
+  the neutered path (exception-safety).
+- **T5 regression — full `./gradlew clean build` GREEN (AC9).** NullAway clean on the 4 new main types
+  (the two `@Nullable` `reverse()`/`modeB()` derefs are guarded; no other nullable surfaces). ArchUnit
+  RELAY-025/026 unaffected (no `65536` literal, no `message_id` map in `relay/netty/`). The 3 build
+  warnings are pre-existing (`RpcSlice.java` `JavaUtilDate`/`ArrayRecordComponent`, unrelated).
+- **T5 forward notes for T6.** (1) The shared `PooledByteBufAllocator` bean exists and is
+  `PooledByteBufAllocator.DEFAULT` — T6 wires it to BOTH legs via `ChannelOption.ALLOCATOR` on the
+  `ServerBootstrap`/`Bootstrap` (`.option`/`.childOption`/`.handler`); do NOT create a per-channel
+  allocator (AD-21). (2) The AD-30 self-check runs at refresh for mode-b; T6's relay acceptor lifecycle
+  (the 2nd `SmartLifecycle`, explicit `getPhase()`) lands on top of it. (3) The `--add-exports` is in the
+  shared convention — no per-module wiring needed. (4) Any NEW mode-b full-context test (T9's in-JVM mock)
+  must use a memory budget that fits its test JVM (mirror `reverseB()`'s minimal override, or the self-check
+  fail-fasts) — this is correct behavior, not a workaround.
+- **T5 `io.netty.allocator.type=pooled` deviation — FLAGGED for review.** The Netty system property is read
+  once at static init (unreliable to set in code); the explicit `PooledByteBufAllocator.DEFAULT` bean is the
+  authoritative pooling guarantee for relay-wired channels. Setting it as a JVM arg is a deploy concern
+  (Epic 5). The reviewer may prefer to ALSO set it best-effort or lift it to the deploy/ops plan.
+- **T5b DONE (2026-08-15, operator decision) — self-check made UNCONDITIONAL + `companion.memory.budget-check`
+  policy (AD-30 amended in place; see the `.memlog.md` 2026-08-15 entry).** (1) The mode-b guard is GONE:
+  `DirectMemoryBudgetStartupCheck.afterPropertiesSet()` now computes + compares on EVERY boot — every
+  role×mode cell relays (forward relays ESME→reverse), and the AD-17 constructor guarantees exactly one cell
+  per deployment, so per-cell scoping was slice-incremental, not architectural; Epic 3 never needs to widen
+  anything (resolves the Review-Defer "Epic-3 widening" item + the deferred-work tracker entry — the forward
+  cell is now mechanically bitten by `forwardAWithHugeBudgetRefusesToStart`, proven RED when the guard was
+  reintroduced). (2) New key `companion.memory.budget-check: fail | warn` (4th `Memory` component — a POLICY,
+  not a budget-formula input): `fail` = default incl. absent/null (fail-closed — `@Nullable` component, null
+  behaves as FAIL at the single use site; deliberately NOT `@DefaultValue("FAIL")`, which could change the
+  whole-record-null-when-node-absent semantics that the omitted-memory-block refusal test pins); `warn` =
+  loud starred `System.err` accepted-risk banner (`OVER_BUDGET_WARNING`, the `CompanionModeBWarning` /
+  SEC-052 Mode B pattern; reuses `DirectMemoryBudgetException.describe`, now package-private) + start; NO
+  value skips the check itself; an invalid enum token fails the bind (matrix-tested). `validate()` stays the
+  single throw site (unit-tested); the warn arm short-circuits only on `budget > ceiling && WARN`.
+  (3) Test accommodations (the exact boots the T5 scoping protected — minimal-budget overrides, NOT
+  disable-to-pass): minimal budget (1/1/1.0) moved from `reverseB()` into `TestCompanionConfigs.common()`
+  (every full-context boot now carries the check), + run-arg overrides added to the two forward-A yml-backed
+  full boots (`BootstrapLifecycleTest.MINIMAL_MEMORY`, `CompanionTlsBindingTest` first test). (4) Tests:
+  `DirectMemoryBudgetStartupCheckTest` now 4 — happy (starts, allocator==DEFAULT, NO banner under ceiling),
+  mode-b default refusal, **forward.mode-a unconditionality refusal**, **warn boots + banner** (CapturedOutput);
+  matrix gains the invalid-enum refusal (53 total). 5 direct `Memory(...)` constructions gained the 4th
+  `null` arg. (5) Mutations proven RED: M1 warn-arm neutered (`== WARN` → `false`) → warn test RED; M2
+  mode-b guard reintroduced → forward-A test RED; restore → full `:proxy:test` GREEN.
 
 ### File List
 
@@ -705,6 +865,94 @@ glm-5.2[1m] (Tasks 1–4 — bootstrap gate + observability contract seed + pass
 - *(mutation-pass only, ZERO net change — not listed as modified):* `proxy/.../relay/ConnectionEntry.java` —
   `beginTearingDown()` CAS neutered (then restored) for the idempotent-teardown RED-on-neuter; a throwaway
   `Map<String, SystemId> messageIdIndex` probe injected (then removed) for the RELAY-025 RED-on-neuter.
+- `buildSrc/src/main/kotlin/smpp.java-conventions.gradle.kts` — **unchanged vs HEAD** *(corrected
+  2026-08-15, review round 2 — the T5-era entry below falsely claimed a "modified" state; the
+  `--add-exports java.base/jdk.internal.misc=ALL-UNNAMED` was added in T5 and then REMOVED by Review
+  Decision A, which switched the ceiling read to `ManagementFactory`/`Runtime.maxMemory()`; the file
+  carries only `--enable-preview`. Kept for the record:)* T5 briefly added
+  `--add-exports java.base/jdk.internal.misc=ALL-UNNAMED` to `JavaCompile` + `Test` + `JavaExec`.
+- `proxy/src/main/java/smpp/companion/proxy/relay/netty/package-info.java` — **added** (T5): the
+  `relay/netty/` sub-package `@NullMarked` (AD-35 — nullness does not propagate to sub-packages); home for
+  the Netty bootstrap beans (allocator + self-check now; acceptor + pipelines in T6).
+- `proxy/src/main/java/smpp/companion/proxy/relay/netty/DirectMemoryBudgetValidator.java` — **added** (T5,
+  **modified** T5b review round 2): pure statics `validate(long budget, long liveCeiling)` (throws iff
+  budget > liveCeiling) + `liveDirectMemoryCeiling()` *(corrected 2026-08-15: reads the LAST explicit
+  `-XX:MaxDirectMemorySize` via `ManagementFactory` input args — HotSpot duplicate-flag last-wins — else
+  `Runtime.maxMemory()`; NOT `jdk.internal.misc.VM.maxDirectMemory()`, which Review Decision A removed
+  with its `--add-exports`. NOT `ByteBufAllocatorMetric` usage.)*. Round 2 also added: `parseSize` accepts
+  HotSpot's `t`/`T` suffix (a valid `-XX:MaxDirectMemorySize=1t` previously died as a raw
+  `NumberFormatException`) and wraps unparseable tokens in an error naming the flag; the last-wins scan
+  is the pure `lastMaxDirectMemorySizeToken(List)`. Unit-testable logic isolated from the JVM surface.
+- `proxy/src/main/java/smpp/companion/proxy/relay/netty/DirectMemoryBudgetException.java` — **added** (T5):
+  the AD-17 fail-fast `RuntimeException` (budget + ceiling in the message + accessors).
+- `proxy/src/main/java/smpp/companion/proxy/relay/netty/RelayNettyConfig.java` — **added** (T5):
+  `@Configuration` with `@Bean PooledByteBufAllocator` → `PooledByteBufAllocator.DEFAULT` (AD-21 one shared
+  pooled allocator; T6 wires every channel to it).
+- `proxy/src/main/java/smpp/companion/proxy/relay/netty/DirectMemoryBudgetStartupCheck.java` — **added**
+  (T5): `@Component` `InitializingBean` — computes the budget via `MemoryBudget.compute(...)` from
+  `companion.memory.*` and validates against the live ceiling at refresh; **mode-b-scoped** (no-op for
+  other cells this slice; widen for forward/mode-a/c in Epic 3).
+- `proxy/src/test/java/smpp/companion/proxy/relay/netty/DirectMemoryBudgetValidatorTest.java` — **added**
+  (T5): pure unit tests *(5 at T5; 8 after the Decision A rework + T5b round 2 — suffix decode incl. `t`,
+  error-message content, last-wins flag scan)* — budget>ceiling throws; budget==ceiling boundary;
+  budget<ceiling; exception accessors; `liveDirectMemoryCeiling()` > 0 (smoke-proves the read).
+- `proxy/src/test/java/smpp/companion/proxy/relay/netty/DirectMemoryBudgetStartupCheckTest.java` — **added**
+  (T5): full `ProxyCompanionApplication` context tests (2) — mode-b + minimal budget starts (allocator bean
+  == `PooledByteBufAllocator.DEFAULT`, self-check ran); mode-b + huge `concurrent-pairs` → context fails
+  (root cause `DirectMemoryBudgetException`). Memory overrides via command-line args; mode-b branch via
+  `.properties()`. Fail-fast biter is exception-safe (closes the unexpectedly-started context when neutered).
+- `proxy/src/test/java/smpp/companion/proxy/config/TestCompanionConfigs.java` — **modified** (T5):
+  `reverseB()` overrides `companion.memory.*` to a minimal budget (1/1/1.0) after `common()` so a valid
+  mode-b full-context boot fits the test JVM's direct-memory ceiling (the self-check is a new mode-b
+  startup invariant). Comment explains why; no test asserts on reverseB() memory.
+- *(mutation-pass only, ZERO net change — not listed as modified):*
+  `proxy/.../relay/netty/DirectMemoryBudgetValidator.java` — the `budget > liveCeiling` guard neutered to
+  `if (false)` (then restored) for the T5 RED-on-neuter pass.
+- `proxy/src/main/java/smpp/companion/proxy/config/ProxyCompanionProperties.java` — **modified** (T5b): the
+  `Memory` record gains its 4th component `BudgetCheck budgetCheck`
+  (`companion.memory.budget-check` — non-null; the FAIL default ships in application.yml; owner FIXME
+  resolved 2026-08-15) + the nested `BudgetCheck { FAIL, WARN }` enum (policy, not a formula
+  input; see the T5b Dev Notes entry for why `@DefaultValue` was rejected).
+- `proxy/src/main/java/smpp/companion/proxy/relay/netty/DirectMemoryBudgetStartupCheck.java` — **modified**
+  (T5b): mode-b guard REMOVED (unconditional — every role×mode cell); warn arm emits `OVER_BUDGET_WARNING`
+  (starred `System.err` banner) + returns; `validate()` stays the single throw site.
+- `proxy/src/main/java/smpp/companion/proxy/relay/netty/DirectMemoryBudgetException.java` — **modified**
+  (T5b): remediation text names the `budget-check=warn` opt-in; `describe(...)` package-private (banner reuse).
+- `proxy/src/main/resources/application.yml` — **modified** (T5b): `companion.memory.budget-check: fail`
+  + policy comment (not a formula input; no skip value).
+- `proxy/src/test/java/smpp/companion/proxy/relay/netty/DirectMemoryBudgetStartupCheckTest.java` —
+  **modified** (T5b): 2 → 4 tests — + forward-A unconditionality refusal (full `ProxyCompanionApplication`
+  boot), + warn boots-with-banner (CapturedOutput); happy test gains the no-banner-under-ceiling negative;
+  `@ExtendWith(OutputCaptureExtension.class)`.
+- `proxy/src/test/java/smpp/companion/proxy/config/TestCompanionConfigs.java` — **modified** (T5b): minimal
+  budget moved `reverseB()` → `common()` (the check is unconditional — every full-context boot needs it).
+- `proxy/src/test/java/smpp/companion/proxy/bootstrap/BootstrapLifecycleTest.java` — **modified** (T5b):
+  `MINIMAL_MEMORY` run-args on both forward-A boots (yml's realistic ≈ 6 GiB budget trips the check under a
+  capped test JVM).
+- `proxy/src/test/java/smpp/companion/proxy/config/CompanionTlsBindingTest.java` — **modified** (T5b):
+  minimal-memory run-args on the yml-backed forward-A boot (same reason); TLS-from-yml assertion unchanged.
+- `proxy/src/test/java/smpp/companion/proxy/config/CompanionConfigMatrixTest.java` — **modified** (T5b):
+  + invalid `budget-check` token refusal test (53 tests); 3 direct `Memory(...)` constructions gain `null`.
+- `proxy/src/test/java/smpp/companion/proxy/config/CompanionRoleFailFastTest.java` — **modified** (T5b):
+  2 direct `Memory(...)` constructions gain `null`.
+- *(mutation-pass only, ZERO net change — not listed as modified):*
+  `proxy/.../relay/netty/DirectMemoryBudgetStartupCheck.java` — M1 (warn-arm comparison → `false`) + M2
+  (mode-b guard reintroduced) neutered then restored for the T5b RED-on-neuter pass.
+- `_bmad-output/planning-artifacts/architecture/architecture-smpp-companions-2026-07-19/ARCHITECTURE-SPINE.md`
+  — **modified** (T5b): AD-30 rule amended in place (unconditional self-check + `budget-check` policy) +
+  dated amendment note.
+- `_bmad-output/planning-artifacts/architecture/architecture-smpp-companions-2026-07-19/.memlog.md` —
+  **appended** (T5b): the 2026-08-15 amendment entry.
+- `_bmad-output/implementation-artifacts/deferred-work.md` — **modified** (T5b): "no mechanical guard forces
+  the Epic-3 widening" entry → ✅ RESOLVED.
+- *(T5b review round 2, 2026-08-15)* `proxy/.../relay/netty/DirectMemoryBudgetValidator.java` —
+  **modified again**: `t`/`T` suffix + flag-naming parse errors + LAST-wins
+  `lastMaxDirectMemorySizeToken(List)` scan (see the round-2 Review Findings).
+- *(T5b review round 2)* `proxy/.../relay/netty/DirectMemoryBudgetValidatorTest.java` — **modified again**:
+  8 tests (suffix incl. `t`, error content, last-wins scan).
+- *(T5b review round 2)* `proxy/.../relay/netty/DirectMemoryBudgetStartupCheckTest.java` — **modified
+  again**: 6 tests (+ null⇒FAIL direct-construction cell, + warn-under-ceiling no-banner cell; T2/T3
+  banner-absence asserts; T2 comment corrected).
 
 ## Change Log
 
@@ -763,7 +1011,181 @@ glm-5.2[1m] (Tasks 1–4 — bootstrap gate + observability contract seed + pass
   EmbeddedChannel singleton-id trap handled (every test channel uses `DefaultChannelId.newInstance()`).
   Full `:proxy:test` GREEN + `./gradlew clean build` GREEN (AC9); NullAway clean. (T5–T11 remain open —
   story stays in-progress.)
+- 2026-08-12 — **Story 2.2 Task 5:** AC8 shared `PooledByteBufAllocator` (AD-21) + AD-30 live direct-memory
+  self-check (AI-6). NEW `proxy/relay/netty/` sub-package (`@NullMarked`): `DirectMemoryBudgetValidator`
+  (pure statics — `validate(budget, liveCeiling)` throws iff budget > liveCeiling; `liveDirectMemoryCeiling()`
+  → `jdk.internal.misc.VM.maxDirectMemory()`, the live ceiling NOT `ByteBufAllocatorMetric`'s usage),
+  `DirectMemoryBudgetException` (AD-17 fail-fast), `RelayNettyConfig` (`@Bean PooledByteBufAllocator` →
+  `PooledByteBufAllocator.DEFAULT` — the one shared pooled allocator), `DirectMemoryBudgetStartupCheck`
+  (`@Component` `InitializingBean`; computes the budget via `MemoryBudget.compute(...)` and validates at
+  refresh; **mode-b-scoped** — no-op for other cells this slice). Build-convention change:
+  `--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED` added to `smpp.java-conventions.gradle.kts`
+  (`JavaCompile`+`Test`+`JavaExec`, shared alongside `--enable-preview`) — `--add-exports` (direct public-API
+  access, not `--add-opens`); `ManagementFactory` fallback not wired (the export is clean + the live API
+  handles the `-Xmx`-default case). Tests (7): `DirectMemoryBudgetValidatorTest` (5 unit) +
+  `DirectMemoryBudgetStartupCheckTest` (2 full-context — minimal-budget happy path + huge-budget fail-fast;
+  memory overrides via command-line args since `.properties()` is lowest-precedence and loses to
+  application.yml). Existing-test accommodation: `TestCompanionConfigs.reverseB()` uses a minimal memory
+  budget so a valid mode-b full-context boot fits the test JVM's 512 MiB ceiling (the self-check is a new
+  mode-b startup invariant; NOT a disable-to-pass — no test `@Disabled`/removed). RED-on-neuter PROVEN on
+  BOTH the unit and the context biter (neuter `validate()`'s guard → both RED → restore → GREEN). Honest
+  deviation FLAGGED: `io.netty.allocator.type=pooled` system property is superseded by the explicit pooled
+  bean (the property is read once at Netty static init, unreliable to set in code; JVM-arg is deploy/Epic 5).
+  `./gradlew clean build` GREEN (AC9); NullAway clean; RELAY-025/026 unaffected. (T6–T11 remain open —
+  story stays in-progress.)
+
+- 2026-08-15 — **Story 2.2 Task 5b (operator decision):** AD-30 self-check made UNCONDITIONAL (mode-b guard
+  removed — runs for every role×mode cell; Epic 3 will never need to widen it) + new
+  `companion.memory.budget-check: fail | warn` over-ceiling policy (`fail` default incl. absent — prior
+  behavior; `warn` = loud accepted-risk banner + start, the Mode B pattern; no skip value). Binding spine
+  AD-30 amended in place + `.memlog.md` entry appended; deferred-work "Epic-3 widening" entry resolved.
+  Tests: startup-check suite 2 → 4 (forward-A unconditionality refusal; warn boots + banner; no-banner
+  negative); invalid-enum matrix refusal; minimal-budget accommodations in `common()` + the two forward-A
+  yml-backed boots. Mutations M1 (warn arm) + M2 (reintroduced guard) proven RED; `:proxy:test` GREEN
+  after restore.
+
+- 2026-08-15 — **Story 2.2 T5b review round 2 (adversarial workflow, 4 lenses → per-finding refutation):**
+  13 raw findings → 9 confirmed (1 HIGH: the absent/null `budget-check`⇒FAIL cell had NO biting test —
+  yml's explicit `fail` masked it; the `!= FAIL` mutation survived the whole suite) → all 9 fixed + 1
+  parent-verified extra (duplicate-flag last-wins). Validator now accepts HotSpot's `t` suffix (a valid
+  `-XX:MaxDirectMemorySize=1t` previously crashed every boot with a raw NFE — reproduced on the real
+  jar), names the flag in parse errors, and reads the LAST duplicate flag occurrence. Startup-check
+  tests 2→6: + null⇒FAIL direct-construction cell, + (warn, under-ceiling) no-banner cell, + FAIL-path
+  banner-absence asserts. Stale T5-era File List/AC8 mechanism claims corrected (buildSrc is UNCHANGED vs
+  HEAD — Decision A removed the `--add-exports`). Mutations M3/M4/M5 each RED on exactly their test;
+  full `clean build` GREEN (6/6 + 8/8). Refuted-but-real `spring.main.lazy-initialization` bypass
+  recorded as a deferred-work app-wide posture item.
 
 ## Review Findings
 
-_(filled at code review)_
+### Review 2026-08-12 — Story 2.2 T5 (AD-30 direct-memory self-check)
+
+Reviewed by: adversarial 3-layer workflow (Blind Hunter + Edge Case Hunter + Acceptance Auditor) + per-finding REFUTE verification, then human triage. Scope: uncommitted changes vs HEAD (11 files, +545/−7). Stack: Netty 4.2.16.Final, Spring Boot 4.1.0 / Spring 7.0.8, JDK 25. Result: **3 decision-needed, 5 patch, 2 defer, 2 dismissed.**
+
+**Resolutions (applied 2026-08-12, all verified):**
+- **[Decision A → ManagementFactory fallback]** (user choice). `DirectMemoryBudgetValidator.liveDirectMemoryCeiling()` now reads an explicit `-XX:MaxDirectMemorySize` via `ManagementFactory`, else falls back to `Runtime.maxMemory()` (the `-Xmx` default) — no `jdk.internal.misc`. The `--add-exports` was **removed** from `smpp.java-conventions.gradle.kts`, which **also resolves [Patch B]** (the codec purity surface is gone — no module receives the export). New `parseSize()` helper + unit tests. Verified: `java -jar proxy.jar` with **no flags** boots cleanly on the happy path (`Started ProxyCompanionApplication`) and fails-fast with `DirectMemoryBudgetException` (not `IllegalAccessError`) on the over-budget path; `./gradlew clean build` GREEN.
+- **[Decision G → leave as-is]** (spec-conformant; `safety-factor` default 1.5 is the documented headroom knob).
+- **[Decision H → skip]** (the `compute`-throws arm is already unit-bitten by `MemoryBudgetTest`; `afterPropertiesSet` propagates both throws identically).
+- **[Patches C/D/E/F → applied]**: spine AD-30/AD-21 amended in place + `.memlog.md` entry (C); TiB→TB comment (D); `toMiB()`→`describe()` (E — visible in the verified fail-fast message: "6000000 MiB / 7716 MiB"); `@Bean(destroyMethod="")` on the allocator (F).
+- **[Defer I/J]** → appended to `deferred-work.md`.
+
+**Decision-needed (resolve first):**
+
+- [x] [Review][Decision] **[HIGH] Production `java -jar proxy.jar` crashes with `IllegalAccessError` on the AD-30 self-check.** `--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED` is wired only into `JavaCompile`/`Test`/`JavaExec` (`smpp.java-conventions.gradle.kts:29,35,41`); the Spring Boot `bootJar` is a `Jar` task, so the produced jar's manifest carries NO `Add-Exports` (verified — manifest has only `Main-Class`/`Start-Class`). A production mode-b boot (`java -jar proxy.jar`) therefore hits `IllegalAccessError: ... module java.base does not export jdk.internal.misc to unnamed module` at `DirectMemoryBudgetValidator.liveDirectMemoryCeiling()` *before* the budget comparison runs — the self-check fails with the WRONG exception (a `LinkageError`, not `DirectMemoryBudgetException`), defeating AD-30/AD-17 intent. `./gradlew clean build` stays GREEN only because the Test JVM carries the export, so AC9's gate cannot see it. Options: (a) add `Add-Exports: java.base/jdk.internal.misc ALL-UNNAMED` to the bootJar manifest (keep the accurate `VM.maxDirectMemory()`); (b) fall back to `ManagementFactory` arg-parsing (no internal API, but misses the `-Xmx`-default case the author chose `VM.maxDirectMemory()` for); (c) defer to Epic 5 deploy (leaves `java -jar` broken until then). Empirically reproduced by the verify layer (crash, then clean boot with `--add-exports`). [buildSrc/.../smpp.java-conventions.gradle.kts:29-41; proxy/build.gradle.kts; proxy/.../DirectMemoryBudgetValidator.java:36]
+- [x] [Review][Decision] **Inclusive-ceiling leaves zero direct-memory headroom when `safety-factor=1.0`.** `validate()` throws only on `budget > liveCeiling` (equality passes — spec-mandated by AD-30 "≥ the computed budget" / AC8 strict "live ceiling < budget"). With `safety-factor=1.0` and depth×pairs tuned to the ceiling, the self-check passes yet leaves no JVM-wide headroom for non-relay direct allocations. Code is spec-conformant; the question is whether AD-30/AC8 should be tightened to enforce minimum headroom (e.g. `@DecimalMin("1.1")` on `safety-factor`, or reserve headroom in the comparison). Policy call for the architect. [proxy/.../DirectMemoryBudgetValidator.java:48-52; proxy/.../ProxyCompanionProperties.java:285]
+- [x] [Review][Decision] **No Spring-level test for the `MemoryBudget.compute`-throws arm.** The integration test covers only the `validate()` arm (`budget > ceiling`). Binding `safety-factor=Infinity` (passes `@DecimalMin("1.0")`) or near-`Integer.MAX_VALUE` depth×pairs makes `compute()` throw `IllegalArgumentException` → `BeanCreationException` — a distinct, reachable fail-fast path through the bean, unexercised at the Spring level. (The guard IS unit-bitten by the pre-existing `MemoryBudgetTest`, Story 1.3, and `afterPropertiesSet` propagates both throws identically; AC9 names the `validate()` arm specifically.) Worth an extra context-level biter? [proxy/.../DirectMemoryBudgetStartupCheckTest.java]
+
+**Patch:**
+
+- [x] [Review][Patch] **[MEDIUM] Shared `--add-exports` grants the codec silent access to `jdk.internal.misc`, breaching its purity posture (AD-7).** The export lives in the SHARED convention, so the purity-gated codec inherits it; before this change `import jdk.internal.misc.VM` was a compile error in codec, now it compiles+runs, and no ArchUnit/CODEC-040 rule forbids `jdk.internal.**` reach. Fix: scope the export to the proxy module only (move to `proxy/build.gradle.kts`); optionally add a `ForbiddenApis`/ArchUnit rule forbidding `jdk.internal.**`/`sun.misc.**` outside `DirectMemoryBudgetValidator`. [buildSrc/.../smpp.java-conventions.gradle.kts:29]
+- [x] [Review][Patch] **Binding spine AD-30/AD-21 not amended — still says "read/exposed via ByteBufAllocatorMetric".** The impl justifiably reads `VM.maxDirectMemory()` (`ByteBufAllocatorMetric` exposes only `usedDirectMemory()` — usage, not the ceiling), and the story spec was amended, but the BINDING `ARCHITECTURE-SPINE.md` AD-30 (line 239) + AD-21 (line 194) were not. Per the contract-amendment discipline, amend the spine in place + append an `.memlog.md` entry. (Exact text depends on the Decision above — keep `VM.maxDirectMemory()` vs fallback.) [_bmad-output/.../ARCHITECTURE-SPINE.md:194,239]
+- [x] [Review][Patch] **Fail-fast test comment has the wrong unit (TiB vs TB).** `65536 × 64 × 1e6 × 1.5 = 6.29e12 bytes = 5.72 TiB = 6.29 TB`; the comment says "≈ 6.3 TiB" (6.3 is the decimal-TB figure). Pure comment, zero runtime effect. [proxy/.../DirectMemoryBudgetStartupCheckTest.java:22,25,61]
+- [x] [Review][Patch] **`toMiB()` integer division renders "0 MiB" for sub-mebibyte budgets.** `bytes / (1024L*1024L)` yields 0 below 1 MiB, so a sub-MiB trip's message reads e.g. "65536 bytes / 0 MiB". Only pathological (`-XX:MaxDirectMemorySize=<sub-MiB>`); the precise byte count is always shown too. Format with a decimal, or omit the MiB portion when < 1 MiB. [proxy/.../DirectMemoryBudgetException.java:43-45]
+- [x] [Review][Patch] **`@Bean PooledByteBufAllocator` has no explicit `destroyMethod = ""` (defensive).** Returns the JVM-global `PooledByteBufAllocator.DEFAULT`. Verified via `javap`: Netty 4.2.16's allocator exposes NO `close()`/`shutdown()`/`AutoCloseable`, so Spring infers nothing today — **no current bug**. Add `@Bean(destroyMethod = "")` to pin intent against a future Netty bump that could add a lifecycle method (which would corrupt the shared singleton at context close). Optional defense-in-depth. [proxy/.../RelayNettyConfig.java:32-35]
+
+**Defer:**
+
+- [x] [Review][Defer] **`validate()` silently passes negative-equal inputs** (e.g. `validate(-1,-1)`) — latent: the sole caller feeds a non-negative budget from `MemoryBudget.compute` (which guards `product < 0`) and a positive ceiling from `VM.maxDirectMemory()`. A `budget < 0 || liveCeiling <= 0` precondition would convert the silent pass into a fail-fast. Upstream-guarded today. [proxy/.../DirectMemoryBudgetValidator.java:48-52] — deferred, latent/upstream-guarded
+- [x] [Review][Defer] **No mechanical guard forces the Epic-3 widening of the mode-b self-check.** The `reverse()==null || modeB()==null` no-op branch is slice-correct, and the widening requirement is on the load-bearing Javadoc/dev-notes, but nothing bites if Epic 3 wires a forward/mode-a/c relay without widening it. Proposed ArchUnit guards were unsound (the allocator `@Bean` is unconditional). Track via a sprint-status `action_item` for Epic 3. [proxy/.../DirectMemoryBudgetStartupCheck.java:34-44] — deferred, forward (Epic 3)
+  **[RESOLVED 2026-08-15 (T5b, operator decision — not by deferral): the guard is gone entirely; the check is
+  unconditional and the forward cell is mechanically bitten by
+  `DirectMemoryBudgetStartupCheckTest.forwardAWithHugeBudgetRefusesToStart` (proven RED when the mode-b guard
+  was reintroduced — mutation M2). Deferred-work tracker entry resolved in kind.]**
+
+**Dismissed (2):** weak `liveDirectMemoryCeilingIsPositive()` smoke test (REFUTED — proposed `isEqualTo(Runtime.maxMemory())` fix is self-defeating: on a stock JVM `VM.maxDirectMemory() == Runtime.maxMemory()` by definition); `DirectMemoryBudgetValidator` methods "over-exposed" as public (matches house style `CompanionConfigValidator`, no reachable external consumer in the 2-module repo).
+
+### Review 2026-08-15 — Story 2.2 T5b (adversarial workflow: 4 lenses → per-finding refutation; 13 raw, 9 confirmed, 4 refuted)
+
+**Confirmed and FIXED in this round:**
+
+- [x] **[HIGH] The absent/null `budget-check` ⇒ FAIL cell had no biting test** — every full-app boot loads
+  application.yml, which now ships an EXPLICIT `budget-check: fail`, so `budgetCheck()` was never null at
+  the guard; the round-1 mode-b refusal test's comment overclaimed ("the default (fail) is what this test
+  bites" — it bit yml's explicit value). The verifier's `!= FAIL` mutation survived the entire suite.
+  FIX: `nullBudgetCheckBehavesAsFailOnOverCeilingBudget` — direct construction (`Memory(64, 1_000_000,
+  1.5, null)`, no Spring) → `afterPropertiesSet()` MUST throw; T2's comment corrected. Mutation M3
+  (`== WARN` → `!= FAIL`) now RED on exactly this test.
+- [x] **[MEDIUM] The (warn, under-ceiling) matrix cell was untested** — dropping the `budget > ceiling &&`
+  conjunct (banner on every warn boot regardless of provisioning) passed the whole suite. FIX:
+  `budgetCheckWarnUnderCeilingStartsWithoutBanner` (starts + NO banner). Mutation M4 (conjunct dropped)
+  RED on exactly this test.
+- [x] **[MEDIUM] `parseSize` rejected HotSpot's valid `t`/`T` suffix** — a healthy
+  `-XX:MaxDirectMemorySize=1t` deployment died on every cell with a raw `NumberFormatException` naming
+  neither the flag nor AD-30 (verifier reproduced end-to-end on the real boot jar: `512g` boots, `1t`
+  crashes). FIX: `t` branch added (1024⁴); unparseable tokens now throw an error naming
+  `-XX:MaxDirectMemorySize` and the token; tests pin `1t`/`2T` + the error content.
+- [x] **[MEDIUM] Story File List/AC8 still pinned the pre-Decision-A mechanism** — the File List claimed
+  buildSrc was "modified" to add `--add-exports` (it is UNCHANGED vs HEAD; Decision A removed the export),
+  and living entries still described the ceiling as `VM.maxDirectMemory()`. FIX: buildSrc entry corrected
+  to net state; Validator/ValidatorTest entries corrected (ManagementFactory/Runtime.maxMemory; 5→8
+  tests); AC8 amendment now notes the Decision A mechanism replacement.
+- [x] **[LOW] FAIL-path tests never asserted banner absence** — a hoisted `println` (banner + refusal)
+  passed the suite, telling the operator the risk was "opted in" when it was not. FIX: T2/T3 gained
+  `CapturedOutput` + `doesNotContain("AD-30 DIRECT-MEMORY BUDGET")`. Mutation M5 (hoisted banner) RED on
+  exactly both.
+- [x] **[LOW] deferred-work `validate()` entry cited the superseded `VM.maxDirectMemory()` + a stale
+  `:48-52` anchor** (stale-on-arrival: shipped in the same diff that removed the mechanism). FIX: entry
+  corrected (`liveDirectMemoryCeiling()` via ManagementFactory/Runtime.maxMemory; explicit `=0` can now
+  yield a 0 ceiling, which STRENGTHENS the proposed guard; anchor = the `validate(long, long)` method).
+- [x] **[LOW] sprint-status `last_updated` (2026-08-12) predated the T5b content (2026-08-15) in the same
+  edit set.** FIX: stamped 2026-08-15.
+
+**Refuted (4):** sprint-status stamp (dupe of the above — refuter argued commit-time bookkeeping, fixed
+anyway as zero-risk); `spring.main.lazy-initialization=true` bypasses the check (mechanism REAL and
+reproduced — Spring defers all eager beans, so both the self-check AND the AD-17 zero-branch refusal
+silently pass — but app-wide, pre-existing, and out of T5b's scope; recorded as a deferred-work app-wide
+posture item, not a T5b defect); "living sections still instruct Epic-3 widening" (append-only history
+convention; the File List carries the T5b supersession 20 lines below and mutation M2 kills any
+reintroduced guard); duplicate `-XX:MaxDirectMemorySize` first-vs-last match (the finding was REAL — see
+the fix below — but its verifier died on a 429; parent-verified against HotSpot last-wins semantics and
+fixed with the finding's own recommendation).
+
+**Fixed additionally (from the unverified-due-to-429 finding, parent-verified):**
+
+- [x] **`liveDirectMemoryCeiling()` took the FIRST `-XX:MaxDirectMemorySize` match; HotSpot applies
+  duplicate command-line flags last-wins** — first-match under-reports the ceiling and falsely refuses a
+  healthy deployment. FIX: the read now takes the LAST occurrence via the pure
+  `lastMaxDirectMemorySizeToken(List)` (unit-tested: `[...,=1g,...,=8g] → 8g`; absent → null →
+  `Runtime.maxMemory()` fallback).
+
+**Verification after the round:** mutations M3/M4/M5 each RED on exactly their new test (M1/M2 from
+round 1 unchanged); full `./gradlew clean build` GREEN; `DirectMemoryBudgetStartupCheckTest` 6/6,
+`DirectMemoryBudgetValidatorTest` 8/8.
+
+**Operational note (honest record):** during the workflow, a verifier's mutation-restore collided with
+the parent's `/tmp` backup path and transiently reverted `DirectMemoryBudgetStartupCheck.java` on disk to
+the staged T5 version; detected via the workflow's caveat, rewritten to the ratified T5b content, and the
+full clean build + mutation passes above ran AFTER that restoration. All round-2 mutations used unique
+backup paths.
+
+- 2026-08-15 — **Story 2.2 T5b owner refinement (post-review):** the warn arm restructured per owner
+  in-code FIXMEs — `validate()` is now the single comparison AND throw site (the owner: "use validation
+  gate instead of condition"): `afterPropertiesSet()` calls the gate in a try/catch, and the policy is
+  applied to the gate's VERDICT — `WARN` prints the starred banner carrying the caught exception's own
+  message ("log warning using exception message" — one source of truth for budget/ceiling/remediation,
+  banner and failure cannot drift) and boots; `FAIL`/null rethrows. Behavior identical (all 6
+  startup-check tests + 8 validator tests GREEN unchanged); mutations re-proven in the gate shape
+  (`== WARN`→`!= FAIL` → null-cell test RED; swallow→always-rethrow → warn test RED). The
+  `describe(...)` package-private widening was reverted (no longer needed — the banner reuses the
+  message). `./gradlew clean build` GREEN.
+
+- 2026-08-15 — **Story 2.2 T5b owner FIXMEs addressed (2):** (1) `Memory.budgetCheck` is now NON-null —
+  the FAIL default ships in `application.yml` (no `@DefaultValue`, which could construct a half-defaulted
+  record when the whole memory node is absent); the check's `== WARN` comparison stays null-safe, so even
+  a yml-less bind delivering null fails closed. The 5 "don't-care" direct constructions now pass explicit
+  `FAIL`; the deliberately-null defensive pin REMAINS (NullAway is main-only) and still bites the
+  `!= FAIL` mutation (re-proven RED). New pin: the full-app happy boot asserts
+  `memory().budgetCheck() == FAIL` — the yml default is now load-bearing, so it is pinned end-to-end.
+  (2) The warn banner now goes through SLF4J (`log.warn(OVER_BUDGET_WARNING, e.getMessage())` — one `{}`
+  placeholder, no pre-formatting) instead of `System.err.println` — the FIRST logger in proxy main;
+  `CompanionModeBWarning` still uses the System.err banner (out of this change's scope). Tests unchanged
+  in shape: Logback console output is captured by `CapturedOutput` (warn test GREEN proves the path).
+  Mutations re-proven in the final shape: `== WARN`→`!= FAIL` → null-cell test RED; `== WARN`→`== FAIL`
+  → 3 tests RED (warn loses banner+start; both FAIL-paths banner+swallow instead of refuse). Full
+  `./gradlew clean build` GREEN; no FIXMEs remain in main.
+
+- 2026-08-15 — **Story 2.2 T5b owner FIXME (3rd): logger via Lombok** — the manual
+  `LoggerFactory.getLogger` field became `@Slf4j` (first `@Slf4j` in the proxy module; the
+  `io.freefair.lombok` plugin was already applied). Behavior identical (same generated field, same WARN
+  banner through Logback — the warn-banner test stays GREEN). Full `./gradlew clean build` GREEN; no
+  FIXMEs remain in main.
